mise en place de base pour home

--- a/index.html
+++ b/index.html
@@ -14,8 +14,43 @@
 </head>
 
 <body>
-    <h1>Hero Warudo</h1>
-    
+    <header>
+        <div class="container-fluid">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <nav>
+                            <ul class="d-flex">
+                                <li>HOME</li>
+                                <li>SKILLS</li>
+                                <li>PORTFOLIO</li>
+                                <li>CONTACT</li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <!-- bottom bar -->
+    <div class="container-fluid bottom-bar">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <nav>
+                        <ul class="d-flex">
+                            <li>HOME</li>
+                            <li>SKILLS</li>
+                            <li>PORTFOLIO</li>
+                            <li>CONTACT</li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- ********************************************************** -->
 
 
     <!-- Optional JavaScript -->
