--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 
 <body>
     <header>
-        <div class="container-fluid">
+        <div class="container-fluid p-5">
             <div class="container">
                 <div class="row">
                     <div class="col-12">
                         <nav>
-                            <ul class="d-flex">
+                            <ul class="d-flex justify-content-between list-unstyled">
                                 <li>HOME</li>
                                 <li>SKILLS</li>
                                 <li>PORTFOLIO</li>
@@ -34,16 +34,14 @@
     </header>
 
     <!-- bottom bar -->
-    <div class="container-fluid bottom-bar">
+    <div class="container-fluid bottom-bar p-5">
         <div class="container">
             <div class="row">
                 <div class="col-12">
                     <nav>
-                        <ul class="d-flex">
+                        <ul class="d-flex justify-content-end list-unstyled">
                             <li>HOME</li>
                             <li>SKILLS</li>
-                            <li>PORTFOLIO</li>
-                            <li>CONTACT</li>
                         </ul>
                     </nav>
                 </div>
@@ -51,6 +49,13 @@
         </div>
     </div>
     <!-- ********************************************************** -->
+
+    <main>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+    </main>
 
 
     <!-- Optional JavaScript -->
