etoffement section home, image et text

--- a/index.html
+++ b/index.html
@@ -51,7 +51,27 @@
     <!-- ********************************************************** -->
 
     <main>
-        <section></section>
+        <section class="home">
+            <div class="container-fluid p-5">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-6">
+                            <p><img src="media/girasole.jpg" alt="image profile" width="500" height="590"></p>
+                        </div>
+
+                        <div class="col-6">
+                            <h2>Sacha</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores, omnis dolores
+                                laudantium excepturi maiores, modi aliquam sit nisi recusandae assumenda est. Labore
+                                sint quod blanditiis voluptate dignissimos officia perferendis cum.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores, omnis dolores
+                                laudantium excepturi maiores, modi aliquam sit nisi recusandae assumenda est. Labore
+                                sint quod blanditiis voluptate dignissimos officia perferendis cum.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section></section>
         <section></section>
         <section></section>
