mise en place de base en terme de style? (base du portfolio en place, contact basique en place, progess bar bootstrap page skills

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body class="home-main-color">
     <header class="home-second-color">
-        <div class="container-fluid p-5">
+        <div class="container-fluid p-3">
             <div class="container">
                 <div class="row">
                     <div class="col-12">
@@ -34,7 +34,7 @@
     </header>
 
     <!-- bottom bar -->
-    <div class="container-fluid bottom-bar p-5 home-second-color">
+    <div class="container-fluid bottom-bar p-3 home-second-color">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -51,7 +51,7 @@
     </div>
     <!-- ********************************************************** -->
 
-    <main class="fade-anim">
+    <main class="fade-anim pt-100px">
         <section class="home">
             <div class="container-fluid p-5">
                 <div class="container">
